FINALLY fixed menu spacing, placed footer and working on text alignment #5

--- a/style.css
+++ b/style.css
@@ -126,3 +126,21 @@ h3{
 a{
     text-decoration: none;
 }
+
+.footer-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 7%;
+    background-color: var(--white);
+    color: var(--blue);
+    padding: 10px;
+  }
+
+.footer-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 7%;
+}
